--- a/wiki/outhouse.wikitext
+++ b/wiki/outhouse.wikitext
@@ -1,7 +1,8 @@
 /owt hows/
 
 ==Noun==
-#An outdoor [[restroom]], essentially a [[toilet]], (or often just a seat over a [[cesspool]]) in a wooden cubicle, where the term is usually referring to a [[permanent]] facility. Where an outdoor toilet is installed on a [[tempoary]] basis, the term '''[[portable toilet]]''' is generally used.
+[[Image:OuthouseAtCrabappleLakeRotated.jpg|thumb|right|80px|''Outhouse with [[chipboard]] walls and [[fiberglass]] ceiling'']]
+#An outdoor [[restroom]], essentially a [[toilet]], (or often just a seat over a [[cesspool]]) in a wooden cubicle, where the term is usually referring to a [[permanent]] facility. Where an outdoor toilet is installed on a [[temporary]] basis, the term '''[[portable toilet]]''' is generally used.
 
 ===Synonyms===
 *[[Shithouse]]
