noun and verb synonyms are different <guess#37547>

--- a/wiki/guess.wikitext
+++ b/wiki/guess.wikitext
@@ -6,8 +6,8 @@
 '''to guess''' ([[guesses]], [[guessed]], [[guessing]])
 
 ====Synonyms====
+*[[hypothesize]]
 *[[take a stab]]
-*[[hypothesis]]
 
 ====Translations====
 *Chinese: [[猜測]], [[猜测]]
@@ -22,6 +22,9 @@
 
 ===Noun===
 '''guess''' (plural: [[guesses]])
+
+====Synonyms====
+*[[hypothesis]]
 
 ====Translations====
 *Chinese: [[猜測]], [[猜测]]
