replace category:japanese language because it relates to the language <和製英語#513480>

--- a/wiki/%E5%92%8C%E8%A3%BD%E8%8B%B1%E8%AA%9E.wikitext
+++ b/wiki/%E5%92%8C%E8%A3%BD%E8%8B%B1%E8%AA%9E.wikitext
@@ -16,4 +16,4 @@ distinction vs. [[Engrish]]
 
 [[ja:&#21644;&#35069;&#33521;&#35486;]]
 
-[[Category:Japanese terms]]
+[[Category:Japanese terms]][[Category:Japanese language]]
