+fi, def needed <guess#37547>

--- a/wiki/guess.wikitext
+++ b/wiki/guess.wikitext
@@ -5,39 +5,71 @@
 ===Verb===
 '''to guess''' ([[guesses]], [[guessed]], [[guessing]])
 
+#{{substub}}
+
 ====Synonyms====
 *[[hypothesize]]
 *[[take a stab]]
 
 ====Translations====
+<!-- def needed: '''xxx''' -->
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Chinese: [[猜測]], [[猜测]]
 *Dutch: [[veronderstellen]]
+*Finnish: [[arvata]]
 *French: [[deviner]]
 *German: [[schätzen]]
 *Greek: [[υποθέσει]]
 *Italian: [[indovinare]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Russian: [[угадать]] (ugadat')
 *Spanish: [[adivinar]], [[conjeturar]]
 *Swedish: [[gissa]]
+|}
+|}
 
 ===Noun===
 '''guess''' (plural: [[guesses]])
+
+#{{substub}}
 
 ====Synonyms====
 *[[hypothesis]]
 
 ====Translations====
+<!-- def needed: '''xxx''' -->
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Chinese: [[猜測]], [[猜测]]
 *Dutch: [[gissing]] ''de''
+*Finnish: [[arvaus]]
 *French: [[conjecture]] ''f''
 *German: [[Vermutung]] ''f''
 *Greek: [[εικασία]] ''f''
 *Italian: [[congettura]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[推測]]
 *Korean: [[추측]]
 *Portuguese: [[suposição]] ''f''
 *Russian: [[догадка]] ''f'' (dogadka)
 *Spanish: [[conjetura]] ''f''
+|}
+|}
 
 ===Related terms===
 *[[guesswork]]
