/* Verb */ balance columns <guess#37547>

--- a/wiki/guess.wikitext
+++ b/wiki/guess.wikitext
@@ -17,19 +17,19 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to I go here-->
+<!--left column-->
 *Chinese: [[猜測]], [[猜测]]
 *Dutch: [[veronderstellen]]
 *Finnish: [[arvata]]
 *French: [[deviner]]
 *German: [[schätzen]]
-*Greek: [[υποθέσει]]
-*Italian: [[indovinare]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+<!--right column-->
+*Greek: [[υποθέσει]]
+*Italian: [[indovinare]]
 *Russian: [[угадать]] (ugadat')
 *Spanish: [[adivinar]], [[conjeturar]]
 *Swedish: [[gissa]]
