/* Translations */ balance columns <guess#37547>

--- a/wiki/guess.wikitext
+++ b/wiki/guess.wikitext
@@ -50,19 +50,19 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to I go here-->
+<!--left column-->
 *Chinese: [[猜測]], [[猜测]]
 *Dutch: [[gissing]] ''de''
 *Finnish: [[arvaus]]
 *French: [[conjecture]] ''f''
 *German: [[Vermutung]] ''f''
 *Greek: [[εικασία]] ''f''
-*Italian: [[congettura]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from J to Z go here-->
+<!--right column-->
+*Italian: [[congettura]] ''f''
 *Japanese: [[推測]]
 *Korean: [[추측]]
 *Portuguese: [[suposição]] ''f''
