--- a/wiki/guess.wikitext
+++ b/wiki/guess.wikitext
@@ -19,7 +19,7 @@
 {|
 <!--left column-->
 *Chinese: [[猜測]], [[猜测]]
-*Dutch: [[veronderstellen]]
+*Dutch: [[veronderstellen]], [[gissen]]
 *Finnish: [[arvata]]
 *French: [[deviner]]
 *German: [[schätzen]]
@@ -52,7 +52,7 @@
 {|
 <!--left column-->
 *Chinese: [[猜測]], [[猜测]]
-*Dutch: [[gissing]] ''de''
+*Dutch: [[gok]] ''m'', [[gissing]] ''f'', [[veronderstelling]] ''f''
 *Finnish: [[arvaus]]
 *French: [[conjecture]] ''f''
 *German: [[Vermutung]] ''f''
