--- a/wiki/%E5%AF%92%E5%BF%83.wikitext
+++ b/wiki/%E5%AF%92%E5%BF%83.wikitext
@@ -1,5 +1,12 @@
+==Chinese==
+===Verb===
+'''[[寒]][[心]]''' (hanxin)
+
+# be [[desappoint]]ed
+
+----
 ==Korean [[Hanja]]==
-<!-- surely an adjective? -->
-'''[[寒]][[心]]''' ([[한심]])
+===Adjective===
+'''[[寒]][[心]]''' ([[한심]], hansim-hada or -seureobda)
 
 # [[miserable]]
