/* Korean [[Hanja]] */ <寒心#64362>

--- a/wiki/%E5%AF%92%E5%BF%83.wikitext
+++ b/wiki/%E5%AF%92%E5%BF%83.wikitext
@@ -7,6 +7,6 @@
 ----
 ==Korean [[Hanja]]==
 ===Adjective===
-'''[[寒]][[心]]''' ([[한심]], hansim-hada or -seureobda)
+'''[[寒]][[心]]''' ([[한심]]하다, or 스럽다, hansim-hada or -seureobda)
 
 # [[miserable]]
