--- a/wiki/%E5%AF%92%E5%BF%83.wikitext
+++ b/wiki/%E5%AF%92%E5%BF%83.wikitext
@@ -2,9 +2,10 @@
 ===Verb===
 '''[[寒]][[心]]''' (hanxin)
 
-# be [[desappoint]]ed
+# be [[disappoint]]ed
 
 ----
+
 ==Korean [[Hanja]]==
 ===Adjective===
 '''[[寒]][[心]]''' ([[한심]]하다, or 스럽다, hansim-hada or -seureobda)
