--- a/wiki/%E4%B8%89%E6%9C%88.wikitext
+++ b/wiki/%E4%B8%89%E6%9C%88.wikitext
@@ -1,3 +1,17 @@
+==Chinese==
+===Noun===
+'''[[三]][[月]]''' (sanyue)
+
+# [[March]] (''the month'')
+
+----
+==Japanese==
+===Noun===
+'''[[三]][[月]]''' (さんがつ)
+
+# [[March]] (''the month'')
+
+----
 ==Korean [[Hanja]]==
 <!-- noun, surely? -->
 '''[[三]][[月]]''' ([[삼월]])
