/* Noun */ +romaji <三月#64360>

--- a/wiki/%E4%B8%89%E6%9C%88.wikitext
+++ b/wiki/%E4%B8%89%E6%9C%88.wikitext
@@ -7,11 +7,12 @@
 ----
 ==Japanese==
 ===Noun===
-'''[[三]][[月]]''' (さんがつ)
+'''[[三]][[月]]''' (さんがつ, sangatsu)
 
 # [[March]] (''the month'')
 
 ----
+
 ==Korean [[Hanja]]==
 <!-- noun, surely? -->
 '''[[三]][[月]]''' ([[삼월]])
