--- a/wiki/lawn.wikitext
+++ b/wiki/lawn.wikitext
@@ -1,8 +1,9 @@
 ==English==
-
 ===Noun===
-
 '''lawn'''
 
 #An open space between woods.
 #Ground (generally in front of or around a house) covered with grass kept closely mown.
+
+====Derived terms====
+*[[lawn mower]]
