--- a/wiki/they.wikitext
+++ b/wiki/they.wikitext
@@ -16,7 +16,7 @@ The third person, nominative case, usually plural, but sometimes used incorrectl
 *Another indefinite pronoun is [[one]], but the two words do not mean the same and are rarely interchangeable.
 
 ====Usage notes====
-*''incorrect'' If a ''[[child]]'' is too short for the [[rollercoaster]], ''they'' will not be allowed to ride.  (The subject (singular) and the personal pronoun (plural) do not [[agree]] in [[number]].)
+*''incorrect'': If a ''[[child]]'' is too short for the [[rollercoaster]], ''they'' will not be allowed to ride.  (The subject [singular] and the personal pronoun [plural] do not [[agree]] in [[number]].)
 *''correct options'':
 **If ''[[children]]'' are too short for the [[rollercoaster]], ''they'' will not be allowed to ride.  
 **If a ''[[child]]'' is too short for the [[rollercoaster]], ''she'' will not be allowed to ride.  
