--- a/wiki/holocaust.wikitext
+++ b/wiki/holocaust.wikitext
@@ -1,1 +1,14 @@
- 1. A sacrifice wholly consumed by fire; a whole burnt offering.     2. ''transf.'' and ''fig.''    a. A complete sacrifice or offering.    b. A sacrifice on a large scale.   c. Complete consumption by fire, or that which is so consumed; complete destruction, esp. of a large number of persons; a great slaughter or massacre.     d. ''the Holocaust:'' the mass murder of the Jews by the Nazis in the war of 1939-1945. Also used ''transf.,'' of the similar fate of other groups; and ''attrib.''
+==English==
+===Noun===
+'''holocaust''' (''plural'' '''holocausts''')
+
+#A [[sacrifice]] wholly [[consume]]d by fire; a whole [[burnt offering]].
+#A complete sacrifice or offering.
+#A sacrifice on a large scale.
+#Complete [[consumption]] by fire, or that which is so consumed.
+#Complete [[destruction]], especially of a large number of persons; a great slaughter or massacre.
+
+===Proper noun===
+'''the Holocaust'''
+
+#The mass murder of [[Jew]]s by the [[Nazi]]s in the [[Second World War]]; also used of the similar fate of other groups; also used [[attributively]].
