fmt; trimmed def <cryptogram#64388>

--- a/wiki/cryptogram.wikitext
+++ b/wiki/cryptogram.wikitext
@@ -1,5 +1,5 @@
 ==English==
 ===Noun===
-'''Cryptogram'''
+'''cryptogram''' (''plural'' '''cryptograms''')
 
-# A type of [[word]] [[puzzle]] where a [[selection]] of [[text]] is [[encode]]d with a simple [[cipher]]; the [[objective]] is to [[decode]] the text.
+#A type of [[word puzzle]] in which text encoded by a simple [[cipher]] is to be [[decode]]d.
