--- a/wiki/they.wikitext
+++ b/wiki/they.wikitext
@@ -24,7 +24,7 @@ The third person, nominative case, usually plural, but sometimes used incorrectl
 **If a ''[[child]]'' is too short for the [[rollercoaster]], ''it'' will not be allowed to ride.
 
 ====Translations====
-*Arabic: [[هما|هُمَا]] (húmaː) ''dual'', [[‎‎هم|هُمْ]] / [[‎‎هم|هُمُ]] (hum/húmu) ''pl'', [[‎‎هن|هُنَّ]] (húnna) ''f/pl''
+*Arabic: [[هما|هُمَا]] (húmaː) ''dual'', [[‎‎هم|هُمُ]] / [[‎‎هم|هُمْ]] (hum/húmu) ''pl'', [[‎‎هن|هُنَّ]] (húnna) ''f/pl''
 *Bulgarian: [[те]] (te)
 *[[Chinese]]: [[他们]], [[她们]], [[它们]], [[人们]]
 *Dutch: [[zij]], [[ze]]
@@ -34,6 +34,7 @@ The third person, nominative case, usually plural, but sometimes used incorrectl
 *[[Fijian]]: [[rau]] ''(dual)'', [[iratou]] ''([[paucal]])'', [[ira]] ''(pl)''
 *French: [[ils]] ''m'', [[elles]] ''f''
 *German: [[sie]]
+*Greek: [[αυτοί]] / [[αυταί]] / [[αυτά]] (aftí/afté/aftá) ''m/f/n''
 *[[Hausa]]: [[súu]] ''(independent form)''
 *Hawaiian: [[lāua]] ''dual'', [[lākou]] ''pl''
 *Hebrew: [[הם]] (hēm) ''m'', [[הן]] (hēn) ''f''
@@ -57,5 +58,5 @@ The third person, nominative case, usually plural, but sometimes used incorrectl
 *[[Tok Pisin]]: [[ol]]
 *Vietnamese: [[họ]]
 *[[!Xũ]]: [[si]] (people), [[hi]] (animals, things)
-*[[Yoruba]]: [[wọ́n]] ''weak pronoun'', [[àwọn]] ''strong pronoun''
+*[[Yoruba]]: [[wọ́n]] ''(weak pronoun)'', [[àwọn]] ''(strong pronoun)''
 [[Category:English third person pronouns]]
