--- a/wiki/quantum.wikitext
+++ b/wiki/quantum.wikitext
@@ -1,11 +1,12 @@
 ==English==
 ===Noun===
-'''quantum''', plural: '''quanta'''.
-# ''(Physics)'' Smallest possible &mdash; and therefore indivisible &mdash; unit of a given quantity or quantifiable phenomenon.
-:: '''Examples:'''
-::* ''Planck's constant is the quantum of angular momentum.''
-::* ''The photon is the quantum of light.''
+'''quantum''' (''plural'' '''quanta''')
 
+#(''physics'') The smallest possible, and therefore indivisible, unit of a given quantity or quantifiable phenomenon.
+#:''Planck's constant is the quantum of angular momentum.''
+#:''The photon is the quantum of light.''
+
+----
 ==Latin==
 ===Adjective===
 ('''quantus''', '''quanta''', '''quantum''')
