--- a/wiki/tournesol.wikitext
+++ b/wiki/tournesol.wikitext
@@ -1,6 +1,5 @@
 ==French==
-
 ===Noun===
-'''tournesol''' ''m''
+'''tournesol''' ''m'' (''plural'' '''tournesols''')
 
-# [[sunflower]]
+#[[sunflower]]
