fmt; +it <sunflower#62704>

--- a/wiki/sunflower.wikitext
+++ b/wiki/sunflower.wikitext
@@ -1,15 +1,14 @@
 ==English==
-
 ===Noun===
+'''sunflower''' (''plural'' '''sunflowers''')
 
-'''sunflower'''
+#Any plant of the genus Helianthus, so called probably from the form and color of its flower, which is large disk with yellow rays; the commonly cultivated sunflower is ''Helianthus annuus'', a native of America.
 
-#Any plant of the genus Helianthus; -- so called probably from the form and color of its flower, which is large disk with yellow rays. The commonly cultivated sunflower is Helianthus annuus, a native of America.
+====Translations====
 
-==== Translation ====
-
-* {{fr}}: [[tournesol]]
-* {{gu}}: [[સુર્યમુખી]] (''suryamukhî'')
-* {{hi}}: [[सुर्यमुखी]] (''suryamukhî'')
+*French: [[tournesol]] ''m''
+*[[Gujarati]]: [[સુર્યમુખી]] (''suryamukhî'')
+*[[Hindi]]: [[सुर्यमुखी]] (''suryamukhî'')
+*Italian: [[girasole]] ''m''
 
 [[fr:sunflower]]
