fmt; +it <sunflower#62704>

--- a/wiki/sunflower.wikitext
+++ b/wiki/sunflower.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''sunflower''' (''plural'' '''sunflowers''')
 
-#Any plant of the genus Helianthus, so called probably from the form and color of its flower, which is large disk with yellow rays; the commonly cultivated sunflower is ''Helianthus annuus'', a native of America.
+#Any plant of the genus Helianthus, so called probably from the form and color of its flower, having the form of a large disk with yellow rays; the commonly cultivated sunflower is ''Helianthus annuus'', a native of America.
 
 ====Translations====
 
