fmt; more syns; does sense "shortened" exist? <curt#57405>

--- a/wiki/curt.wikitext
+++ b/wiki/curt.wikitext
@@ -1,23 +1,20 @@
 ==English==
-
 ===Etymology===
-
 From the Latin [[curtus]], "shortened".
 
 ===Adjective===
-
-# Brief or terse, especially to the point of being rude.
-# Having been shortened.
+#Brief or terse, especially to the point of being rude.
+#Shortened.<!--does this sense exist?-->
 
 ===Synonyms===
-
-[[brusque]]
+*(''terse to the point of being rude''): [[abrupt]], [[blunt]], [[brusque]]
 
 ===Derived terms===
+*[[curtly]]
+*[[curtness]]
 
-[[curtly]], [[curtness]]
-===Proper Noun===
+===Proper noun===
 '''Curt'''
 
-#a short form of the male given name Curtis
-#an alternate spelling of [[Kurt]].
+#A short form of the male [[given name]] Curtis.
+#A variant spelling of [[Kurt]].
