--- a/wiki/qwerty.wikitext
+++ b/wiki/qwerty.wikitext
@@ -11,3 +11,6 @@ From the first six letters on the top row of such a keyboard.
 
 #Describing a standard keyboard layout in which the alphabet is arranged in the order QWERTYUIOP on the top row, ASDFGHJKL on the middle row, and ZXCVBNM on the bottom row.
 #:''qwerty keyboard''
+
+===See also===
+*[[azerty]]
