/* Czech/Polish */ <they#5749>

--- a/wiki/they.wikitext
+++ b/wiki/they.wikitext
@@ -27,6 +27,7 @@ The third person, nominative case, usually plural, but sometimes used incorrectl
 *Arabic: [[هما|هُمَا]] (húmaː) ''dual'', [[‎‎هم|هُمُ]] / [[‎‎هم|هُمْ]] (hum/húmu) ''pl'', [[‎‎هن|هُنَّ]] (húnna) ''f/pl''
 *Bulgarian: [[те]] (te)
 *[[Chinese]]: [[他们]], [[她们]], [[它们]], [[人们]]
+*Czech: [[oni]], [[ony]]
 *Dutch: [[zij]], [[ze]]
 *[[Dyirbal]]: ''(no third-person pronoun)''
 *[[Esperanto]]: [[ili]]
@@ -45,6 +46,7 @@ The third person, nominative case, usually plural, but sometimes used incorrectl
 *Italian: [[essi]], [[loro]]
 *Japanese: [[彼ら]] / [[彼等]] ([[かれら]], karéra)
 *Korean: [[그들]] (geudeul)
+*Polish: [[oni]]  ''m'', [[one]] ''(nonmasculine)''
 *Portuguese: [[eles]] ''m'', [[elas]] ''f''
 *[[Quechua]]: [[paykuna]]
 *Romanian: [[ei]] ''m'', [[ele]] ''f''
