+ja compound; wikification <伎#10655>

--- a/wiki/%E4%BC%8E.wikitext
+++ b/wiki/%E4%BC%8E.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': talent, skill, ability
+* '''Common Meaning''': [[talent]], [[skill]], [[ability]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** [[Mandarin]]:
@@ -30,19 +30,22 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[き]] (ki), [[ぎ]] (gi)
 ** '''[[Kun]]''': [[わざ]] (waza)
 
+* '''Compounds''':
+** [[歌舞伎]] (かぶき, kabuki): [[kabuki]]
+
 * '''Other info''':  
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''Pronunciation''': 기
+* '''Pronunciation''': [[기]]
 
 * '''Romanization'''
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': gi
