+ja compound; wikification <舞#24652>

--- a/wiki/%E8%88%9E.wikitext
+++ b/wiki/%E8%88%9E.wikitext
@@ -11,13 +11,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#dance, posture, prance
-*# brandish
-
+*#[[dance]], [[posture]], [[prance]]
+*# [[brandish]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -33,19 +32,22 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ぶ]] (bu), [[む]] (mu)
 ** '''[[Kun]]''': [[まう]] (mau), [[まい]] (mai)
 
+* '''Compounds''':
+** [[歌舞伎]] (かぶき, kabuki): [[kabuki]]
+
 * '''Other info''':  
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 무
+* '''[[Hangeul]]''': [[무]]
 
 * '''[[Eumhun]] reading''': 
 
