moved to infinitive; modified spelling <kibitzing#64442>

--- a/wiki/kibitzing.wikitext
+++ b/wiki/kibitzing.wikitext
@@ -1,5 +1,9 @@
 ==English==
 ===Verb===
-'''Kibbitzing'''
-Traditional Jewish phrase
-# Butting in and giving advice where it is none of one's business.
+'''to kibitz''' ('''kibitzing''', '''kibitzed''', '''kibitzed''')
+
+====Variant spellings====
+'''kibbitz'''
+<!--Traditional Jewish phrase: is this an etymology?-->
+
+#To give advice when it is not wanted, especially to someone playing a game.
