moved content here from "kibbitzing"; is "chat, commiserate" a valid meaning? <kibitz#60509>

--- a/wiki/kibitz.wikitext
+++ b/wiki/kibitz.wikitext
@@ -1,7 +1,10 @@
 ==English==
+===Intransitive verb===
+'''to kibitz''' ('''kibitzing''', '''kibitzed''', '''kibitzed''')
 
-===Verb===
+====Variant spellings====
+'''kibbitz'''
+<!--Traditional Jewish phrase: is this an etymology?-->
 
-'''to kibitz'''
-
-#To chat; commiserate.
+<!--#To chat; commiserate: is this correct?-->
+#To give advice when it is not wanted, especially to someone playing a game.
