--- a/wiki/kabuki.wikitext
+++ b/wiki/kabuki.wikitext
@@ -1,7 +1,11 @@
 ==English==
+===Etymology===
+Japanese
 
 ===Noun===
-
 '''kabuki'''
 
-#A form of Japanese theatre in which elaborately costumed male performers use stylized movements, dances, and songs in order to enact tragedies and comedies.
+#A form of Japanese [[theatre]] in which elaborately costumed male performers use stylized movements, dances, and songs in order to enact tragedies and comedies.
+
+====Translations====
+*Japanese: [[歌舞伎]] (かぶき, kabuki)
