ref to "kibitz" <kibitzing#64442>

--- a/wiki/kibitzing.wikitext
+++ b/wiki/kibitzing.wikitext
@@ -1,9 +1,13 @@
 ==English==
-===Verb===
-'''to kibitz''' ('''kibitzing''', '''kibitzed''', '''kibitzed''')
+===Variant spelling===
+'''kibbitzing'''
 
-====Variant spellings====
-'''kibbitz'''
-<!--Traditional Jewish phrase: is this an etymology?-->
+===Verb form===
+'''kibitzing'''
 
-#To give advice when it is not wanted, especially to someone playing a game.
+#[[Present participle]] of '''to [[kibitz]]'''.
+
+===Noun===
+'''kibitzing''' (''[[uncountable]]'')
+
+#The action of the verb '''to [[kibitz]]'''.
