+ja compound; wikification <歌#18361>

--- a/wiki/%E6%AD%8C.wikitext
+++ b/wiki/%E6%AD%8C.wikitext
@@ -11,14 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#song, lyrics
-*# sing, chant
-*# praise
-
+*#[[song]], [[lyric]]s
+*# [[sing]], [[chant]]
+*# [[praise]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,19 +33,22 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[か]] (ka)
 ** '''[[Kun]]''': [[うたう]] (utau), [[うた]] (uta)
 
+* '''Compounds''':
+** [[歌舞伎]] ([[かぶき]], kabuki): [[kabuki]]
+
 * '''Other info''':  
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 가
+* '''[[Hangeul]]''': [[가]]
 
 * '''[[Eumhun]] reading''': 
 
