fmt <carb-face#64403>

--- a/wiki/carb-face.wikitext
+++ b/wiki/carb-face.wikitext
@@ -1,1 +1,5 @@
-Vernacular. A condition where one's face swells up.
+==English==
+===Noun===
+'''carb-face'''
+
+#(''slang'') A condition in which the face swells.
