--- a/wiki/pendant.wikitext
+++ b/wiki/pendant.wikitext
@@ -1,10 +1,10 @@
-=English=
-
-==Noun==
+==English==
+===Noun===
+'''pendant''' ([[pendants]])
 
 #A symbol used to represent an idea or organization: ''Christians wear a cross as a'' pendant ''of their faith.''
 #A [[necklace]] with an [[ornament]] suspended from it.
 
-==Confused with==
-
+====Confused with====
+*[[pedant]]
 *[[pennant]], which is a flag
